DERBY-673: Get rid of the NodeFactory
Patch, derby-673-more-typesafe-6. This cleans up most compiler
warnings in the classes touched, including unnecessary casts due to
changes introduced by this use, but also others.  Some warnings were
silenced using the @SuppressWarning tag (mostly use of old classes
like Vector, Hashtable), in other cases the underlying problem was
fixed by changing the code as required.

It also introduces an explicit TriggerDescriptorList class extending a
generified GenericDescriptorList<TriggerDescriptor>.

Some local variables shadowing others are renamed and in in case
the two variables were merged into one.

I left in place warnings about missing serialVersionUID in
serializable classes since I am not sure whether they can be safely
suppressed; it would need further analysis.

git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@1502965 13f79535-47bb-0310-9956-ffa450edef68